--- a/spring-boot-docker/Dockerfile
+++ b/spring-boot-docker/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:11-jdk
 VOLUME /tmp
-ARG JAR_FILE
-COPY ${JAR_FILE} app.jar
+COPY target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
